2010-04-09  Manuel López-Ibáñez  <manu@gcc.gnu.org>

	PR c++/28584
	* gcc.dg/Wint-to-pointer-cast-1.c: Move to...
	* c-c++-common/Wint-to-pointer-cast-1.c: ...  here.
	* gcc.dg/Wint-to-pointer-cast-2.c: Move to...	
	* c-c++-common/Wint-to-pointer-cast-2.c: ...  here.
	* gcc.dg/Wint-to-pointer-cast-3.c: Move to...	
	* c-c++-common/Wint-to-pointer-cast-3.c: ...  here. Update.
	* g++.old-deja/g++.mike/warn1.C: Add -Wno-int-to-pointer-cast.
	* g++.dg/other/increment1.C: Likewise.

2010-04-09  Tobias Burnus  <burnus@net-b.de>

	PR fortran/18918
	* gfortran.dg/coarray_7.f90: New test.
	* gfortran.dg/coarray_8.f90: New test.

2010-04-08  Bud Davis  <bdavis9659@sbcglobal.net>

	PR fortran/28039
	* gfortran.dg/fmt_with_extra.f: Remove xfail and update test.

2010-04-08  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	PR target/43643
	* gcc.dg/pr43643.c: New test.

2010-04-08  Tobias Burnus  <burnus@net-b.de>

	* gfortran.dg/iso_fortran_env_6.f90: Add more checks.

2010-04-08  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/43679
	* gcc.c-torture/compile/pr43679.c: New testcase.

2010-04-08  Jakub Jelinek  <jakub@redhat.com>

	PR debug/43670
	* gcc.dg/pr43670.c: New test.

2010-04-08  Maxim Kuvyrkov  <maxim@codesourcery.com>

	PR middle-end/40815
	* gcc.dg/tree-ssa/reassoc-19.c: New.

2010-04-07  Jakub Jelinek  <jakub@redhat.com>

	PR c/18624
	* gcc.dg/Wunused-var-1.c: New test.
	* gcc.dg/Wunused-var-2.c: New test.
	* gcc.dg/Wunused-var-3.c: New test.
	* gcc.dg/Wunused-var-4.c: New test.
	* gcc.dg/Wunused-var-5.c: New test.
	* gcc.dg/Wunused-var-6.c: New test.
	* gcc.dg/Wunused-parm-1.c: New test.

	* gcc.dg/builtin-choose-expr.c: Avoid set but not used warnings.
	* gcc.dg/trunc-1.c: Likewise.
	* gcc.dg/vla-9.c: Likewise.
	* gcc.dg/dfp/composite-type.c: Likewise.

2010-04-07  Iain Sandoe <iains@gcc.gnu.org>

	PR objc/35996
	* objc.dg/objc-gc-4.m: Run for all targets, prune new warning.
	* obj-c++.dg/objc-gc-3.mm: Ditto.
