@@ -1,3 +1,9 @@
+2010-04-09  Kai Tietz  <kai.tietz@onevision.com>
+
+	* g++.dg/other/pr35504.C: Add check for thiscall.
+	* g++.dg/torture/stackalign/eh-thiscall-1.C: New.
+	* gcc.dg/torture/stackalign/thiscall-1.c: New.
+	
 2010-04-09  Manuel López-Ibáñez  <manu@gcc.gnu.org>
 
 	PR c++/28584
